[project]
name = "cluster-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools==5.3.2",
    "celery==5.3.4",
    "fastapi==0.104.1",
    "httpx==0.25.2",
    "motor==3.3.2",
    "ortools>=9.14.6206",
    "pydantic==2.7.0",
    "pydantic-settings==2.3.0",
    "pymongo==4.6.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "pytz==2023.3",
    "redis==5.0.1",
    "uuid==1.30",
    "uvicorn[standard]==0.24.0",
]
